// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GraphQL - Schema extraction > Should be able to extract a simple schema 1`] = `
{
  "interfaces": [
    {
      "description": "A Sanity document",
      "fields": [
        {
          "description": "Date the document was created",
          "fieldName": "_createdAt",
          "isNullable": true,
          "type": "Datetime",
        },
        {
          "description": "Document ID",
          "fieldName": "_id",
          "isNullable": true,
          "type": "ID",
        },
        {
          "description": "Current document revision",
          "fieldName": "_rev",
          "isNullable": true,
          "type": "String",
        },
        {
          "description": "Document type",
          "fieldName": "_type",
          "isNullable": true,
          "type": "String",
        },
        {
          "description": "Date the document was last modified",
          "fieldName": "_updatedAt",
          "isNullable": true,
          "type": "Datetime",
        },
      ],
      "kind": "Interface",
      "name": "Document",
    },
  ],
  "types": [
    {
      "description": undefined,
      "fields": [
        {
          "description": "Date the document was created",
          "fieldName": "_createdAt",
          "isNullable": true,
          "type": "Datetime",
        },
        {
          "description": "Document ID",
          "fieldName": "_id",
          "isNullable": true,
          "type": "ID",
        },
        {
          "description": undefined,
          "fieldName": "_key",
          "type": "String",
        },
        {
          "description": "Current document revision",
          "fieldName": "_rev",
          "isNullable": true,
          "type": "String",
        },
        {
          "description": "Document type",
          "fieldName": "_type",
          "isNullable": true,
          "type": "String",
        },
        {
          "description": "Date the document was last modified",
          "fieldName": "_updatedAt",
          "isNullable": true,
          "type": "Datetime",
        },
        {
          "children": {
            "type": "String",
          },
          "description": undefined,
          "fieldName": "awards",
          "kind": "List",
        },
        {
          "description": undefined,
          "fieldName": "bestFriend",
          "isReference": true,
          "type": "Author",
        },
        {
          "fieldName": "image",
          "type": "Image",
        },
        {
          "children": {
            "type": "Block",
          },
          "description": undefined,
          "fieldName": "minimalBlockRaw",
          "isRawAlias": true,
          "kind": "List",
          "originalName": "minimalBlock",
          "type": "JSON",
        },
        {
          "description": undefined,
          "fieldName": "name",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "role",
          "type": "String",
        },
      ],
      "interfaces": [
        "Document",
      ],
      "kind": "Type",
      "name": "Author",
      "originalName": "author",
      "type": "Object",
      Symbol(internal): {},
    },
    {
      "description": undefined,
      "fields": [
        {
          "description": undefined,
          "fieldName": "_key",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "_type",
          "type": "String",
        },
        {
          "children": {
            "type": "Span",
          },
          "description": undefined,
          "fieldName": "children",
          "kind": "List",
        },
        {
          "description": undefined,
          "fieldName": "level",
          "type": "Float",
        },
        {
          "description": undefined,
          "fieldName": "listItem",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "style",
          "type": "String",
        },
      ],
      "kind": "Type",
      "name": "Block",
      "originalName": "block",
      "type": "Object",
      Symbol(internal): {},
    },
    {
      "crossDatasetReferenceMetadata": {
        "dataset": "production",
        "typeNames": [
          "person",
        ],
      },
      "description": undefined,
      "fields": [
        {
          "description": undefined,
          "fieldName": "_dataset",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "_key",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "_projectId",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "_ref",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "_type",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "_weak",
          "type": "Boolean",
        },
      ],
      "kind": "Type",
      "name": "CdrPersonReference",
      "originalName": "cdrPersonReference",
      "type": "Object",
      Symbol(internal): {},
    },
    {
      "description": undefined,
      "fields": [
        {
          "description": undefined,
          "fieldName": "_key",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "_type",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "code",
          "type": "Text",
        },
        {
          "description": undefined,
          "fieldName": "filename",
          "type": "String",
        },
        {
          "children": {
            "type": "Float",
          },
          "description": undefined,
          "fieldName": "highlightedLines",
          "kind": "List",
        },
        {
          "description": undefined,
          "fieldName": "language",
          "type": "String",
        },
      ],
      "kind": "Type",
      "name": "Code",
      "originalName": "code",
      "type": "Object",
      Symbol(internal): {},
    },
    {
      "description": undefined,
      "fields": [
        {
          "description": undefined,
          "fieldName": "_key",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "_type",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "alpha",
          "type": "Float",
        },
        {
          "description": undefined,
          "fieldName": "hex",
          "type": "String",
        },
        {
          "fieldName": "hsl",
          "type": "HslaColor",
        },
        {
          "fieldName": "hsv",
          "type": "HsvaColor",
        },
        {
          "fieldName": "rgb",
          "type": "RgbaColor",
        },
      ],
      "kind": "Type",
      "name": "Color",
      "originalName": "color",
      "type": "Object",
      Symbol(internal): {},
    },
    {
      "description": undefined,
      "fields": [
        {
          "description": undefined,
          "fieldName": "_dataset",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "_key",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "_projectId",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "_ref",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "_type",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "_weak",
          "type": "Boolean",
        },
      ],
      "kind": "Type",
      "name": "CrossDatasetReference",
      "originalName": "crossDatasetReference",
      "type": "Object",
      Symbol(internal): {},
    },
    {
      "description": undefined,
      "fields": [
        {
          "deprecationReason": "This object type has been deprecated",
          "description": undefined,
          "fieldName": "_key",
          "type": "String",
        },
        {
          "deprecationReason": "This object type has been deprecated",
          "description": undefined,
          "fieldName": "_type",
          "type": "String",
        },
        {
          "deprecationReason": "This object type has been deprecated",
          "description": undefined,
          "fieldName": "description",
          "type": "String",
        },
        {
          "deprecationReason": "This object type has been deprecated",
          "description": undefined,
          "fieldName": "excerpt",
          "type": "String",
        },
        {
          "deprecationReason": "This object type has been deprecated",
          "description": undefined,
          "fieldName": "name",
          "type": "String",
        },
      ],
      "kind": "Type",
      "name": "DeprecatedObject",
      "originalName": "deprecatedObject",
      "type": "Object",
      Symbol(internal): {
        "deprecationReason": "This object type has been deprecated",
      },
    },
    {
      "description": undefined,
      "fields": [
        {
          "deprecationReason": "Entire \`Document actions\` document type deprecated",
          "description": "Date the document was created",
          "fieldName": "_createdAt",
          "isNullable": true,
          "type": "Datetime",
        },
        {
          "deprecationReason": "Entire \`Document actions\` document type deprecated",
          "description": "Document ID",
          "fieldName": "_id",
          "isNullable": true,
          "type": "ID",
        },
        {
          "deprecationReason": "Entire \`Document actions\` document type deprecated",
          "description": undefined,
          "fieldName": "_key",
          "type": "String",
        },
        {
          "deprecationReason": "Entire \`Document actions\` document type deprecated",
          "description": "Current document revision",
          "fieldName": "_rev",
          "isNullable": true,
          "type": "String",
        },
        {
          "deprecationReason": "Entire \`Document actions\` document type deprecated",
          "description": "Document type",
          "fieldName": "_type",
          "isNullable": true,
          "type": "String",
        },
        {
          "deprecationReason": "Entire \`Document actions\` document type deprecated",
          "description": "Date the document was last modified",
          "fieldName": "_updatedAt",
          "isNullable": true,
          "type": "Datetime",
        },
        {
          "deprecationReason": "Entire \`Document actions\` document type deprecated",
          "description": undefined,
          "fieldName": "title",
          "type": "String",
        },
      ],
      "interfaces": [
        "Document",
      ],
      "kind": "Type",
      "name": "DocumentActionsTest",
      "originalName": "documentActionsTest",
      "type": "Object",
      Symbol(internal): {
        "deprecationReason": "Entire \`Document actions\` document type deprecated",
      },
    },
    {
      "description": undefined,
      "fields": [
        {
          "description": "Date the document was created",
          "fieldName": "_createdAt",
          "isNullable": true,
          "type": "Datetime",
        },
        {
          "description": "Document ID",
          "fieldName": "_id",
          "isNullable": true,
          "type": "ID",
        },
        {
          "description": undefined,
          "fieldName": "_key",
          "type": "String",
        },
        {
          "description": "Current document revision",
          "fieldName": "_rev",
          "isNullable": true,
          "type": "String",
        },
        {
          "description": "Document type",
          "fieldName": "_type",
          "isNullable": true,
          "type": "String",
        },
        {
          "description": "Date the document was last modified",
          "fieldName": "_updatedAt",
          "isNullable": true,
          "type": "Datetime",
        },
        {
          "crossDatasetReferenceMetadata": {
            "dataset": "production",
            "typeNames": [
              "person",
              "place",
            ],
          },
          "fieldName": "cdrFieldInline",
          "type": "CrossDatasetReference",
        },
        {
          "crossDatasetReferenceMetadata": {
            "dataset": "production",
            "typeNames": [
              "person",
            ],
          },
          "fieldName": "cdrFieldNamed",
          "type": "CdrPersonReference",
        },
        {
          "fieldName": "productReference",
          "type": "GlobalDocumentReference",
        },
      ],
      "interfaces": [
        "Document",
      ],
      "kind": "Type",
      "name": "DocumentWithCdrField",
      "originalName": "documentWithCdrField",
      "type": "Object",
      Symbol(internal): {},
    },
    {
      "description": undefined,
      "fields": [
        {
          "description": undefined,
          "fieldName": "_key",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "_type",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "asset",
          "isReference": true,
          "type": "SanityFileAsset",
        },
        {
          "fieldName": "media",
          "type": "GlobalDocumentReference",
        },
      ],
      "kind": "Type",
      "name": "File",
      "originalName": "file",
      "type": "Object",
      Symbol(internal): {},
    },
    {
      "description": undefined,
      "fields": [
        {
          "description": undefined,
          "fieldName": "_key",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "_type",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "alt",
          "type": "Float",
        },
        {
          "description": undefined,
          "fieldName": "lat",
          "type": "Float",
        },
        {
          "description": undefined,
          "fieldName": "lng",
          "type": "Float",
        },
      ],
      "kind": "Type",
      "name": "Geopoint",
      "originalName": "geopoint",
      "type": "Object",
      Symbol(internal): {},
    },
    {
      "description": undefined,
      "fields": [
        {
          "description": undefined,
          "fieldName": "_key",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "_ref",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "_type",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "_weak",
          "type": "Boolean",
        },
      ],
      "kind": "Type",
      "name": "GlobalDocumentReference",
      "originalName": "globalDocumentReference",
      "type": "Object",
      Symbol(internal): {},
    },
    {
      "description": undefined,
      "fields": [
        {
          "description": undefined,
          "fieldName": "_key",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "_type",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "a",
          "type": "Float",
        },
        {
          "description": undefined,
          "fieldName": "h",
          "type": "Float",
        },
        {
          "description": undefined,
          "fieldName": "l",
          "type": "Float",
        },
        {
          "description": undefined,
          "fieldName": "s",
          "type": "Float",
        },
      ],
      "kind": "Type",
      "name": "HslaColor",
      "originalName": "hslaColor",
      "type": "Object",
      Symbol(internal): {},
    },
    {
      "description": undefined,
      "fields": [
        {
          "description": undefined,
          "fieldName": "_key",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "_type",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "a",
          "type": "Float",
        },
        {
          "description": undefined,
          "fieldName": "h",
          "type": "Float",
        },
        {
          "description": undefined,
          "fieldName": "s",
          "type": "Float",
        },
        {
          "description": undefined,
          "fieldName": "v",
          "type": "Float",
        },
      ],
      "kind": "Type",
      "name": "HsvaColor",
      "originalName": "hsvaColor",
      "type": "Object",
      Symbol(internal): {},
    },
    {
      "description": undefined,
      "fields": [
        {
          "description": undefined,
          "fieldName": "_key",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "_type",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "asset",
          "isReference": true,
          "type": "SanityImageAsset",
        },
        {
          "fieldName": "crop",
          "type": "SanityImageCrop",
        },
        {
          "fieldName": "hotspot",
          "type": "SanityImageHotspot",
        },
        {
          "fieldName": "media",
          "type": "GlobalDocumentReference",
        },
      ],
      "kind": "Type",
      "name": "Image",
      "originalName": "image",
      "type": "Object",
      Symbol(internal): {},
    },
    {
      "description": undefined,
      "fields": [
        {
          "description": undefined,
          "fieldName": "_key",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "_type",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "asset",
          "isReference": true,
          "type": "MuxVideoAsset",
        },
      ],
      "kind": "Type",
      "name": "MuxVideo",
      "originalName": "mux.video",
      "type": "Object",
      Symbol(internal): {},
    },
    {
      "description": undefined,
      "fields": [
        {
          "description": undefined,
          "fieldName": "_key",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "_type",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "assetId",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "filename",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "playbackId",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "status",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "thumbTime",
          "type": "Float",
        },
      ],
      "kind": "Type",
      "name": "MuxVideoAsset",
      "originalName": "mux.videoAsset",
      "type": "Object",
      Symbol(internal): {},
    },
    {
      "description": undefined,
      "fields": [
        {
          "description": undefined,
          "fieldName": "_key",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "_type",
          "type": "String",
        },
        {
          "children": {
            "type": "ObjectWithNestedArray",
          },
          "description": undefined,
          "fieldName": "arrayNo1",
          "kind": "List",
        },
        {
          "children": {
            "type": "ObjectWithNestedArray",
          },
          "description": undefined,
          "fieldName": "arrayNo11",
          "kind": "List",
        },
        {
          "children": {
            "type": "ObjectWithNestedArray",
          },
          "description": undefined,
          "fieldName": "arrayNo13",
          "kind": "List",
        },
        {
          "children": {
            "type": "ObjectWithNestedArray",
          },
          "description": undefined,
          "fieldName": "arrayNo15",
          "kind": "List",
        },
        {
          "children": {
            "type": "ObjectWithNestedArray",
          },
          "description": undefined,
          "fieldName": "arrayNo17",
          "kind": "List",
        },
        {
          "children": {
            "type": "ObjectWithNestedArray",
          },
          "description": undefined,
          "fieldName": "arrayNo19",
          "kind": "List",
        },
        {
          "children": {
            "type": "ObjectWithNestedArray",
          },
          "description": undefined,
          "fieldName": "arrayNo3",
          "kind": "List",
        },
        {
          "children": {
            "type": "ObjectWithNestedArray",
          },
          "description": undefined,
          "fieldName": "arrayNo5",
          "kind": "List",
        },
        {
          "children": {
            "type": "ObjectWithNestedArray",
          },
          "description": undefined,
          "fieldName": "arrayNo7",
          "kind": "List",
        },
        {
          "children": {
            "type": "ObjectWithNestedArray",
          },
          "description": undefined,
          "fieldName": "arrayNo9",
          "kind": "List",
        },
        {
          "description": undefined,
          "fieldName": "fieldNo0",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "fieldNo10",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "fieldNo12",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "fieldNo14",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "fieldNo16",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "fieldNo18",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "fieldNo2",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "fieldNo4",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "fieldNo6",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "fieldNo8",
          "type": "String",
        },
      ],
      "kind": "Type",
      "name": "ObjectWithNestedArray",
      "originalName": "objectWithNestedArray",
      "type": "Object",
      Symbol(internal): {},
    },
    {
      "description": undefined,
      "fields": [
        {
          "description": undefined,
          "fieldName": "_key",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "_type",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "calculated",
          "type": "Float",
        },
        {
          "description": undefined,
          "fieldName": "nominal",
          "type": "Float",
        },
        {
          "description": undefined,
          "fieldName": "optimistic",
          "type": "Float",
        },
        {
          "description": undefined,
          "fieldName": "pessimistic",
          "type": "Float",
        },
      ],
      "kind": "Type",
      "name": "PertEstimate",
      "originalName": "pertEstimate",
      "type": "Object",
      Symbol(internal): {},
    },
    {
      "description": undefined,
      "fields": [
        {
          "description": "Date the document was created",
          "fieldName": "_createdAt",
          "isNullable": true,
          "type": "Datetime",
        },
        {
          "description": "Document ID",
          "fieldName": "_id",
          "isNullable": true,
          "type": "ID",
        },
        {
          "description": undefined,
          "fieldName": "_key",
          "type": "String",
        },
        {
          "description": "Current document revision",
          "fieldName": "_rev",
          "isNullable": true,
          "type": "String",
        },
        {
          "description": "Document type",
          "fieldName": "_type",
          "isNullable": true,
          "type": "String",
        },
        {
          "description": "Date the document was last modified",
          "fieldName": "_updatedAt",
          "isNullable": true,
          "type": "Datetime",
        },
        {
          "children": {
            "type": "String",
          },
          "description": undefined,
          "fieldName": "primitives",
          "kind": "List",
        },
        {
          "deprecationReason": "This object type has been deprecated",
          "fieldName": "someObject",
          "type": "DeprecatedObject",
        },
        {
          "deprecationReason": "This string type has been deprecated",
          "description": undefined,
          "fieldName": "someString",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "title",
          "type": "String",
        },
      ],
      "interfaces": [
        "Document",
      ],
      "kind": "Type",
      "name": "Poppers",
      "originalName": "poppers",
      "type": "Object",
      Symbol(internal): {},
    },
    {
      "description": undefined,
      "fields": [
        {
          "description": undefined,
          "fieldName": "_key",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "_type",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "a",
          "type": "Float",
        },
        {
          "description": undefined,
          "fieldName": "b",
          "type": "Float",
        },
        {
          "description": undefined,
          "fieldName": "g",
          "type": "Float",
        },
        {
          "description": undefined,
          "fieldName": "r",
          "type": "Float",
        },
      ],
      "kind": "Type",
      "name": "RgbaColor",
      "originalName": "rgbaColor",
      "type": "Object",
      Symbol(internal): {},
    },
    {
      "description": undefined,
      "fields": [
        {
          "description": undefined,
          "fieldName": "_key",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "_type",
          "type": "String",
        },
        {
          "description": "The unique ID for the asset within the originating source so you can programatically find back to it",
          "fieldName": "id",
          "type": "String",
        },
        {
          "deprecationReason": "This field is no longer used",
          "description": "A canonical name for the source this asset is originating from",
          "fieldName": "name",
          "type": "String",
        },
        {
          "description": "A URL to find more information about this asset in the originating source",
          "fieldName": "url",
          "type": "String",
        },
      ],
      "kind": "Type",
      "name": "SanityAssetSourceData",
      "originalName": "sanity.assetSourceData",
      "type": "Object",
      Symbol(internal): {},
    },
    {
      "description": undefined,
      "fields": [
        {
          "description": "Date the document was created",
          "fieldName": "_createdAt",
          "isNullable": true,
          "type": "Datetime",
        },
        {
          "description": "Document ID",
          "fieldName": "_id",
          "isNullable": true,
          "type": "ID",
        },
        {
          "description": undefined,
          "fieldName": "_key",
          "type": "String",
        },
        {
          "description": "Current document revision",
          "fieldName": "_rev",
          "isNullable": true,
          "type": "String",
        },
        {
          "description": "Document type",
          "fieldName": "_type",
          "isNullable": true,
          "type": "String",
        },
        {
          "description": "Date the document was last modified",
          "fieldName": "_updatedAt",
          "isNullable": true,
          "type": "Datetime",
        },
        {
          "description": undefined,
          "fieldName": "altText",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "assetId",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "description",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "extension",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "label",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "mimeType",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "originalFilename",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "path",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "sha1hash",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "size",
          "type": "Float",
        },
        {
          "fieldName": "source",
          "type": "SanityAssetSourceData",
        },
        {
          "description": undefined,
          "fieldName": "title",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "url",
          "type": "String",
        },
      ],
      "interfaces": [
        "Document",
      ],
      "kind": "Type",
      "name": "SanityFileAsset",
      "originalName": "sanity.fileAsset",
      "type": "Object",
      Symbol(internal): {},
    },
    {
      "description": undefined,
      "fields": [
        {
          "description": "Date the document was created",
          "fieldName": "_createdAt",
          "isNullable": true,
          "type": "Datetime",
        },
        {
          "description": "Document ID",
          "fieldName": "_id",
          "isNullable": true,
          "type": "ID",
        },
        {
          "description": undefined,
          "fieldName": "_key",
          "type": "String",
        },
        {
          "description": "Current document revision",
          "fieldName": "_rev",
          "isNullable": true,
          "type": "String",
        },
        {
          "description": "Document type",
          "fieldName": "_type",
          "isNullable": true,
          "type": "String",
        },
        {
          "description": "Date the document was last modified",
          "fieldName": "_updatedAt",
          "isNullable": true,
          "type": "Datetime",
        },
        {
          "description": undefined,
          "fieldName": "altText",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "assetId",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "description",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "extension",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "label",
          "type": "String",
        },
        {
          "fieldName": "metadata",
          "type": "SanityImageMetadata",
        },
        {
          "description": undefined,
          "fieldName": "mimeType",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "originalFilename",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "path",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "sha1hash",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "size",
          "type": "Float",
        },
        {
          "fieldName": "source",
          "type": "SanityAssetSourceData",
        },
        {
          "description": undefined,
          "fieldName": "title",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "uploadId",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "url",
          "type": "String",
        },
      ],
      "interfaces": [
        "Document",
      ],
      "kind": "Type",
      "name": "SanityImageAsset",
      "originalName": "sanity.imageAsset",
      "type": "Object",
      Symbol(internal): {},
    },
    {
      "description": undefined,
      "fields": [
        {
          "description": undefined,
          "fieldName": "_key",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "_type",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "bottom",
          "type": "Float",
        },
        {
          "description": undefined,
          "fieldName": "left",
          "type": "Float",
        },
        {
          "description": undefined,
          "fieldName": "right",
          "type": "Float",
        },
        {
          "description": undefined,
          "fieldName": "top",
          "type": "Float",
        },
      ],
      "kind": "Type",
      "name": "SanityImageCrop",
      "originalName": "sanity.imageCrop",
      "type": "Object",
      Symbol(internal): {},
    },
    {
      "description": undefined,
      "fields": [
        {
          "description": undefined,
          "fieldName": "_key",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "_type",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "aspectRatio",
          "type": "Float",
        },
        {
          "description": undefined,
          "fieldName": "height",
          "type": "Float",
        },
        {
          "description": undefined,
          "fieldName": "width",
          "type": "Float",
        },
      ],
      "kind": "Type",
      "name": "SanityImageDimensions",
      "originalName": "sanity.imageDimensions",
      "type": "Object",
      Symbol(internal): {},
    },
    {
      "description": undefined,
      "fields": [
        {
          "description": undefined,
          "fieldName": "_key",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "_type",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "height",
          "type": "Float",
        },
        {
          "description": undefined,
          "fieldName": "width",
          "type": "Float",
        },
        {
          "description": undefined,
          "fieldName": "x",
          "type": "Float",
        },
        {
          "description": undefined,
          "fieldName": "y",
          "type": "Float",
        },
      ],
      "kind": "Type",
      "name": "SanityImageHotspot",
      "originalName": "sanity.imageHotspot",
      "type": "Object",
      Symbol(internal): {},
    },
    {
      "description": undefined,
      "fields": [
        {
          "description": undefined,
          "fieldName": "_key",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "_type",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "blurHash",
          "type": "String",
        },
        {
          "fieldName": "dimensions",
          "type": "SanityImageDimensions",
        },
        {
          "description": undefined,
          "fieldName": "hasAlpha",
          "type": "Boolean",
        },
        {
          "description": undefined,
          "fieldName": "isOpaque",
          "type": "Boolean",
        },
        {
          "fieldName": "location",
          "type": "Geopoint",
        },
        {
          "description": undefined,
          "fieldName": "lqip",
          "type": "String",
        },
        {
          "fieldName": "palette",
          "type": "SanityImagePalette",
        },
      ],
      "kind": "Type",
      "name": "SanityImageMetadata",
      "originalName": "sanity.imageMetadata",
      "type": "Object",
      Symbol(internal): {},
    },
    {
      "description": undefined,
      "fields": [
        {
          "description": undefined,
          "fieldName": "_key",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "_type",
          "type": "String",
        },
        {
          "fieldName": "darkMuted",
          "type": "SanityImagePaletteSwatch",
        },
        {
          "fieldName": "darkVibrant",
          "type": "SanityImagePaletteSwatch",
        },
        {
          "fieldName": "dominant",
          "type": "SanityImagePaletteSwatch",
        },
        {
          "fieldName": "lightMuted",
          "type": "SanityImagePaletteSwatch",
        },
        {
          "fieldName": "lightVibrant",
          "type": "SanityImagePaletteSwatch",
        },
        {
          "fieldName": "muted",
          "type": "SanityImagePaletteSwatch",
        },
        {
          "fieldName": "vibrant",
          "type": "SanityImagePaletteSwatch",
        },
      ],
      "kind": "Type",
      "name": "SanityImagePalette",
      "originalName": "sanity.imagePalette",
      "type": "Object",
      Symbol(internal): {},
    },
    {
      "description": undefined,
      "fields": [
        {
          "description": undefined,
          "fieldName": "_key",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "_type",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "background",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "foreground",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "population",
          "type": "Float",
        },
        {
          "description": undefined,
          "fieldName": "title",
          "type": "String",
        },
      ],
      "kind": "Type",
      "name": "SanityImagePaletteSwatch",
      "originalName": "sanity.imagePaletteSwatch",
      "type": "Object",
      Symbol(internal): {},
    },
    {
      "description": undefined,
      "fields": [
        {
          "description": undefined,
          "fieldName": "_key",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "_type",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "current",
          "type": "String",
        },
      ],
      "kind": "Type",
      "name": "Slug",
      "originalName": "slug",
      "type": "Object",
      Symbol(internal): {},
    },
    {
      "description": undefined,
      "fields": [
        {
          "description": undefined,
          "fieldName": "_key",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "_type",
          "type": "String",
        },
        {
          "children": {
            "type": "String",
          },
          "description": undefined,
          "fieldName": "marks",
          "kind": "List",
        },
        {
          "description": undefined,
          "fieldName": "text",
          "type": "String",
        },
      ],
      "kind": "Type",
      "name": "Span",
      "originalName": "span",
      "type": "Object",
      Symbol(internal): {},
    },
  ],
}
`;

exports[`GraphQL - Schema extraction > Should be able to extract schema with union refs 1`] = `
{
  "interfaces": [
    {
      "description": "A Sanity document",
      "fields": [
        {
          "description": "Date the document was created",
          "fieldName": "_createdAt",
          "isNullable": true,
          "type": "Datetime",
        },
        {
          "description": "Document ID",
          "fieldName": "_id",
          "isNullable": true,
          "type": "ID",
        },
        {
          "description": "Current document revision",
          "fieldName": "_rev",
          "isNullable": true,
          "type": "String",
        },
        {
          "description": "Document type",
          "fieldName": "_type",
          "isNullable": true,
          "type": "String",
        },
        {
          "description": "Date the document was last modified",
          "fieldName": "_updatedAt",
          "isNullable": true,
          "type": "Datetime",
        },
      ],
      "kind": "Interface",
      "name": "Document",
    },
  ],
  "types": [
    {
      "description": undefined,
      "fields": [
        {
          "description": "Date the document was created",
          "fieldName": "_createdAt",
          "isNullable": true,
          "type": "Datetime",
        },
        {
          "description": "Document ID",
          "fieldName": "_id",
          "isNullable": true,
          "type": "ID",
        },
        {
          "description": undefined,
          "fieldName": "_key",
          "type": "String",
        },
        {
          "description": "Current document revision",
          "fieldName": "_rev",
          "isNullable": true,
          "type": "String",
        },
        {
          "description": "Document type",
          "fieldName": "_type",
          "isNullable": true,
          "type": "String",
        },
        {
          "description": "Date the document was last modified",
          "fieldName": "_updatedAt",
          "isNullable": true,
          "type": "Datetime",
        },
        {
          "description": undefined,
          "fieldName": "title",
          "type": "String",
        },
      ],
      "interfaces": [
        "Document",
      ],
      "kind": "Type",
      "name": "A",
      "originalName": "a",
      "type": "Object",
      Symbol(internal): {},
    },
    {
      "fields": [],
      "kind": "Union",
      "name": "AOrBOrUnion",
      "types": [
        "A",
        "B",
        "Union",
      ],
    },
    {
      "fields": [],
      "kind": "Union",
      "name": "AOrUnion",
      "types": [
        "A",
        "Union",
      ],
    },
    {
      "description": undefined,
      "fields": [
        {
          "description": "Date the document was created",
          "fieldName": "_createdAt",
          "isNullable": true,
          "type": "Datetime",
        },
        {
          "description": "Document ID",
          "fieldName": "_id",
          "isNullable": true,
          "type": "ID",
        },
        {
          "description": undefined,
          "fieldName": "_key",
          "type": "String",
        },
        {
          "description": "Current document revision",
          "fieldName": "_rev",
          "isNullable": true,
          "type": "String",
        },
        {
          "description": "Document type",
          "fieldName": "_type",
          "isNullable": true,
          "type": "String",
        },
        {
          "description": "Date the document was last modified",
          "fieldName": "_updatedAt",
          "isNullable": true,
          "type": "Datetime",
        },
        {
          "description": undefined,
          "fieldName": "title",
          "type": "String",
        },
      ],
      "interfaces": [
        "Document",
      ],
      "kind": "Type",
      "name": "B",
      "originalName": "b",
      "type": "Object",
      Symbol(internal): {},
    },
    {
      "description": undefined,
      "fields": [
        {
          "description": undefined,
          "fieldName": "_key",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "_type",
          "type": "String",
        },
        {
          "children": {
            "type": "Span",
          },
          "description": undefined,
          "fieldName": "children",
          "kind": "List",
        },
        {
          "description": undefined,
          "fieldName": "level",
          "type": "Float",
        },
        {
          "description": undefined,
          "fieldName": "listItem",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "style",
          "type": "String",
        },
      ],
      "kind": "Type",
      "name": "Block",
      "originalName": "block",
      "type": "Object",
      Symbol(internal): {},
    },
    {
      "description": undefined,
      "fields": [
        {
          "description": undefined,
          "fieldName": "_dataset",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "_key",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "_projectId",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "_ref",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "_type",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "_weak",
          "type": "Boolean",
        },
      ],
      "kind": "Type",
      "name": "CrossDatasetReference",
      "originalName": "crossDatasetReference",
      "type": "Object",
      Symbol(internal): {},
    },
    {
      "description": undefined,
      "fields": [
        {
          "description": undefined,
          "fieldName": "_key",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "_type",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "asset",
          "isReference": true,
          "type": "SanityFileAsset",
        },
        {
          "fieldName": "media",
          "type": "GlobalDocumentReference",
        },
      ],
      "kind": "Type",
      "name": "File",
      "originalName": "file",
      "type": "Object",
      Symbol(internal): {},
    },
    {
      "description": undefined,
      "fields": [
        {
          "description": undefined,
          "fieldName": "_key",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "_type",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "alt",
          "type": "Float",
        },
        {
          "description": undefined,
          "fieldName": "lat",
          "type": "Float",
        },
        {
          "description": undefined,
          "fieldName": "lng",
          "type": "Float",
        },
      ],
      "kind": "Type",
      "name": "Geopoint",
      "originalName": "geopoint",
      "type": "Object",
      Symbol(internal): {},
    },
    {
      "description": undefined,
      "fields": [
        {
          "description": undefined,
          "fieldName": "_key",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "_ref",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "_type",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "_weak",
          "type": "Boolean",
        },
      ],
      "kind": "Type",
      "name": "GlobalDocumentReference",
      "originalName": "globalDocumentReference",
      "type": "Object",
      Symbol(internal): {},
    },
    {
      "description": undefined,
      "fields": [
        {
          "description": undefined,
          "fieldName": "_key",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "_type",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "asset",
          "isReference": true,
          "type": "SanityImageAsset",
        },
        {
          "fieldName": "crop",
          "type": "SanityImageCrop",
        },
        {
          "fieldName": "hotspot",
          "type": "SanityImageHotspot",
        },
        {
          "fieldName": "media",
          "type": "GlobalDocumentReference",
        },
      ],
      "kind": "Type",
      "name": "Image",
      "originalName": "image",
      "type": "Object",
      Symbol(internal): {},
    },
    {
      "description": undefined,
      "fields": [
        {
          "description": undefined,
          "fieldName": "_key",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "_type",
          "type": "String",
        },
        {
          "description": "The unique ID for the asset within the originating source so you can programatically find back to it",
          "fieldName": "id",
          "type": "String",
        },
        {
          "description": "A canonical name for the source this asset is originating from",
          "fieldName": "name",
          "type": "String",
        },
        {
          "description": "A URL to find more information about this asset in the originating source",
          "fieldName": "url",
          "type": "String",
        },
      ],
      "kind": "Type",
      "name": "SanityAssetSourceData",
      "originalName": "sanity.assetSourceData",
      "type": "Object",
      Symbol(internal): {},
    },
    {
      "description": undefined,
      "fields": [
        {
          "description": "Date the document was created",
          "fieldName": "_createdAt",
          "isNullable": true,
          "type": "Datetime",
        },
        {
          "description": "Document ID",
          "fieldName": "_id",
          "isNullable": true,
          "type": "ID",
        },
        {
          "description": undefined,
          "fieldName": "_key",
          "type": "String",
        },
        {
          "description": "Current document revision",
          "fieldName": "_rev",
          "isNullable": true,
          "type": "String",
        },
        {
          "description": "Document type",
          "fieldName": "_type",
          "isNullable": true,
          "type": "String",
        },
        {
          "description": "Date the document was last modified",
          "fieldName": "_updatedAt",
          "isNullable": true,
          "type": "Datetime",
        },
        {
          "description": undefined,
          "fieldName": "altText",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "assetId",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "description",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "extension",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "label",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "mimeType",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "originalFilename",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "path",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "sha1hash",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "size",
          "type": "Float",
        },
        {
          "fieldName": "source",
          "type": "SanityAssetSourceData",
        },
        {
          "description": undefined,
          "fieldName": "title",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "url",
          "type": "String",
        },
      ],
      "interfaces": [
        "Document",
      ],
      "kind": "Type",
      "name": "SanityFileAsset",
      "originalName": "sanity.fileAsset",
      "type": "Object",
      Symbol(internal): {},
    },
    {
      "description": undefined,
      "fields": [
        {
          "description": "Date the document was created",
          "fieldName": "_createdAt",
          "isNullable": true,
          "type": "Datetime",
        },
        {
          "description": "Document ID",
          "fieldName": "_id",
          "isNullable": true,
          "type": "ID",
        },
        {
          "description": undefined,
          "fieldName": "_key",
          "type": "String",
        },
        {
          "description": "Current document revision",
          "fieldName": "_rev",
          "isNullable": true,
          "type": "String",
        },
        {
          "description": "Document type",
          "fieldName": "_type",
          "isNullable": true,
          "type": "String",
        },
        {
          "description": "Date the document was last modified",
          "fieldName": "_updatedAt",
          "isNullable": true,
          "type": "Datetime",
        },
        {
          "description": undefined,
          "fieldName": "altText",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "assetId",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "description",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "extension",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "label",
          "type": "String",
        },
        {
          "fieldName": "metadata",
          "type": "SanityImageMetadata",
        },
        {
          "description": undefined,
          "fieldName": "mimeType",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "originalFilename",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "path",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "sha1hash",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "size",
          "type": "Float",
        },
        {
          "fieldName": "source",
          "type": "SanityAssetSourceData",
        },
        {
          "description": undefined,
          "fieldName": "title",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "uploadId",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "url",
          "type": "String",
        },
      ],
      "interfaces": [
        "Document",
      ],
      "kind": "Type",
      "name": "SanityImageAsset",
      "originalName": "sanity.imageAsset",
      "type": "Object",
      Symbol(internal): {},
    },
    {
      "description": undefined,
      "fields": [
        {
          "description": undefined,
          "fieldName": "_key",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "_type",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "bottom",
          "type": "Float",
        },
        {
          "description": undefined,
          "fieldName": "left",
          "type": "Float",
        },
        {
          "description": undefined,
          "fieldName": "right",
          "type": "Float",
        },
        {
          "description": undefined,
          "fieldName": "top",
          "type": "Float",
        },
      ],
      "kind": "Type",
      "name": "SanityImageCrop",
      "originalName": "sanity.imageCrop",
      "type": "Object",
      Symbol(internal): {},
    },
    {
      "description": undefined,
      "fields": [
        {
          "description": undefined,
          "fieldName": "_key",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "_type",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "aspectRatio",
          "type": "Float",
        },
        {
          "description": undefined,
          "fieldName": "height",
          "type": "Float",
        },
        {
          "description": undefined,
          "fieldName": "width",
          "type": "Float",
        },
      ],
      "kind": "Type",
      "name": "SanityImageDimensions",
      "originalName": "sanity.imageDimensions",
      "type": "Object",
      Symbol(internal): {},
    },
    {
      "description": undefined,
      "fields": [
        {
          "description": undefined,
          "fieldName": "_key",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "_type",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "height",
          "type": "Float",
        },
        {
          "description": undefined,
          "fieldName": "width",
          "type": "Float",
        },
        {
          "description": undefined,
          "fieldName": "x",
          "type": "Float",
        },
        {
          "description": undefined,
          "fieldName": "y",
          "type": "Float",
        },
      ],
      "kind": "Type",
      "name": "SanityImageHotspot",
      "originalName": "sanity.imageHotspot",
      "type": "Object",
      Symbol(internal): {},
    },
    {
      "description": undefined,
      "fields": [
        {
          "description": undefined,
          "fieldName": "_key",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "_type",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "blurHash",
          "type": "String",
        },
        {
          "fieldName": "dimensions",
          "type": "SanityImageDimensions",
        },
        {
          "description": undefined,
          "fieldName": "hasAlpha",
          "type": "Boolean",
        },
        {
          "description": undefined,
          "fieldName": "isOpaque",
          "type": "Boolean",
        },
        {
          "fieldName": "location",
          "type": "Geopoint",
        },
        {
          "description": undefined,
          "fieldName": "lqip",
          "type": "String",
        },
        {
          "fieldName": "palette",
          "type": "SanityImagePalette",
        },
      ],
      "kind": "Type",
      "name": "SanityImageMetadata",
      "originalName": "sanity.imageMetadata",
      "type": "Object",
      Symbol(internal): {},
    },
    {
      "description": undefined,
      "fields": [
        {
          "description": undefined,
          "fieldName": "_key",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "_type",
          "type": "String",
        },
        {
          "fieldName": "darkMuted",
          "type": "SanityImagePaletteSwatch",
        },
        {
          "fieldName": "darkVibrant",
          "type": "SanityImagePaletteSwatch",
        },
        {
          "fieldName": "dominant",
          "type": "SanityImagePaletteSwatch",
        },
        {
          "fieldName": "lightMuted",
          "type": "SanityImagePaletteSwatch",
        },
        {
          "fieldName": "lightVibrant",
          "type": "SanityImagePaletteSwatch",
        },
        {
          "fieldName": "muted",
          "type": "SanityImagePaletteSwatch",
        },
        {
          "fieldName": "vibrant",
          "type": "SanityImagePaletteSwatch",
        },
      ],
      "kind": "Type",
      "name": "SanityImagePalette",
      "originalName": "sanity.imagePalette",
      "type": "Object",
      Symbol(internal): {},
    },
    {
      "description": undefined,
      "fields": [
        {
          "description": undefined,
          "fieldName": "_key",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "_type",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "background",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "foreground",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "population",
          "type": "Float",
        },
        {
          "description": undefined,
          "fieldName": "title",
          "type": "String",
        },
      ],
      "kind": "Type",
      "name": "SanityImagePaletteSwatch",
      "originalName": "sanity.imagePaletteSwatch",
      "type": "Object",
      Symbol(internal): {},
    },
    {
      "description": undefined,
      "fields": [
        {
          "description": undefined,
          "fieldName": "_key",
          "type": "String",
        },
        {
          "description": undefined,
          "fieldName": "_type",
          "type": "String",
        },
        {
          "children": {
            "type": "String",
          },
          "description": undefined,
          "fieldName": "marks",
          "kind": "List",
        },
        {
          "description": undefined,
          "fieldName": "text",
          "type": "String",
        },
      ],
      "kind": "Type",
      "name": "Span",
      "originalName": "span",
      "type": "Object",
      Symbol(internal): {},
    },
    {
      "children": {
        "description": undefined,
        "isReference": true,
        "type": "AOrUnion",
      },
      "description": undefined,
      "fields": [],
      "kind": "List",
      "name": "Title",
      "originalName": "title",
    },
    {
      "description": undefined,
      "fields": [
        {
          "description": "Date the document was created",
          "fieldName": "_createdAt",
          "isNullable": true,
          "type": "Datetime",
        },
        {
          "description": "Document ID",
          "fieldName": "_id",
          "isNullable": true,
          "type": "ID",
        },
        {
          "description": undefined,
          "fieldName": "_key",
          "type": "String",
        },
        {
          "description": "Current document revision",
          "fieldName": "_rev",
          "isNullable": true,
          "type": "String",
        },
        {
          "description": "Document type",
          "fieldName": "_type",
          "isNullable": true,
          "type": "String",
        },
        {
          "description": "Date the document was last modified",
          "fieldName": "_updatedAt",
          "isNullable": true,
          "type": "Datetime",
        },
        {
          "children": {
            "inlineObjects": undefined,
            "references": [
              "A",
              "B",
              "Union",
            ],
            "type": "AOrBOrUnion",
          },
          "description": undefined,
          "fieldName": "body",
          "kind": "List",
        },
      ],
      "interfaces": [
        "Document",
      ],
      "kind": "Type",
      "name": "Union",
      "originalName": "union",
      "type": "Object",
      Symbol(internal): {},
    },
  ],
}
`;
